@@ -1,1 +1,1 @@
-#define KWM_VERSION "kwm 0.10 patchlevel 31"
+#define KWM_VERSION "kwm 0.11 patchlevel 0"
